force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/Apttus_Config2__PriceMatrixEntry__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a price matrix</description>
    <label>Price Matrix Entry</label>
    <nameField>
        <displayFormat>ME-{0000000000}</displayFormat>
        <label>Matrix Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>