force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/fields/Apttus_Config2__UsageRate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UsageRate__c</fullName>
    <description>The unit price for the tier</description>
    <inlineHelpText>The unit price for the tier</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>